# unicode-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
dev/: ROADMAP.md  gen_tables.rs
docs/: API.md
docs/release/: v0.2.0.md  v1.0.0.md
src/: ident.rs  lib.rs  lookup.rs  normalize.rs  tables.rs  width.rs
tests/: conformance.rs  proptests.rs
