# =============================================================================
#  R E P S   ·   unicode-lang
# =============================================================================
[package]
name    = "unicode-lang"
version = "1.0.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Unicode identifier rules (XID), normalization, char width."

# Keywords (5 max)
keywords = ["language", "unicode", "identifiers", "xid", "normalization"]

# Categories
categories = ["development-tools", "text-processing"]

# Links
homepage      = "https://github.com/jamesgober/unicode-lang"
repository    = "https://github.com/jamesgober/unicode-lang"
documentation = "https://docs.rs/unicode-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "unicode_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# `std` implies `alloc`; it is otherwise a no-op switch reserved for future
# std-only conveniences. The crate needs no std facilities of its own.
std = ["alloc"]
# Normalization allocates its output; `alloc` gates the `normalize` /
# `is_normalized` API. Identifier and width queries are allocation-free and
# available with no features at all.
alloc = []
# Serialization support for the `Form` selector.
serde = ["dep:serde"]


# DEPENDENCIES
# #################################
[dependencies]
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"
# Exercises the `serde` feature end-to-end for the `Form` selector.
serde_json = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
